--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <button id="add">Add</button>
 
-        <div class="list"></div>
+        <div class="list">
+            <div class="clearAll hide">Clear All</div>
+        </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/app.js"></script>
