--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>Restaurant List</h1>
+        <h1>Restaurant List - JS/jQuery</h1>
 
         <div class="questions">
             <div class="row">
